--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Space Invaders</title>
+    <title>Space invaders</title>
 </head>
 <body>
-    <canvas></canvas>
+  <h1 >Space Invaders</h1>
+  <div id="game-container">
+    <div class="ship" id="ship"></div>
+    <div class="alien" id="alien"></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
