--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Space invaders</title>
 </head>
 <body>
-  <h1 >Space Invaders</h1>
+  <h1>Space Invaders</h1>
   <div id="game-container">
     <div class="ship" id="ship"></div>
     <div class="alien" id="alien"></div>
+    <div class="bullet" id="bullet"></div>
   </div>
   <script src="script.js"></script>
 </body>
