--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Space invaders</title>
-</head>
-<body>  
-  <div id="game-container">
-    <div class="alien" id="alien"></div>
-    <div class="ship" id="ship"></div>
-  </div>
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Space Invaders</title>
+    <link rel="shortcut icon" href="#" />
+    <style>
+      canvas {
+        box-shadow: black 20px 10px 50px;
+      }
+      h1 {
+        margin: 0px;
+        margin-bottom: 10px;
+        font-size: 2.9em;
+      }
+      body {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 0px;
+        margin: 0px;
+        height: 100vh
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Space Invaders</h1>
+    <canvas id="game"></canvas>
+    <script type="module" src="index.js"></script>
+  </body>
 </html>
