--- a/index.html
+++ b/index.html
@@ -5,29 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
-    <link rel="shortcut icon" href="#" />
-    <style>
-      canvas {
-        box-shadow: black 20px 10px 50px;
-      }
-      h1 {
-        margin: 0px;
-        margin-bottom: 10px;
-        font-size: 2.9em;
-      }
-      body {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding: 0px;
-        margin: 0px;
-        height: 100vh
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Space Invaders</h1>
     <canvas id="game"></canvas>
+    <button id="restartButton">Restart</button>
     <script type="module" src="index.js"></script>
   </body>
 </html>
