--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
     <h1>Space Invaders</h1>
     <canvas id="game"></canvas>
     <script type="module" src="index.js"></script>
+    <script type="module" src="bullet.js"></script>
+    <script type="module" src="bulletController.js"></script>
+    <script type="module" src="enemy.js"></script>
+    <script type="module" src="enemyController.js"></script>
+    <script type="module" src="movingDirection.js"></script>
+    <script type="module" src="player.js"></script>
   </body>
 </html>
